# spack-eb-ua-data

./: LICENSE  README.md  export.py  pyproject.toml  spack.yaml
data/eb_docs/by_country/2016/: 2016-08.csv  2016-09.csv  2016-10.csv  2016-11.csv  2016-12.csv
data/eb_docs/by_country/2017/: 2017-01.csv  2017-02.csv  2017-03.csv  2017-04.csv  2017-05.csv  2017-06.csv  2017-07.csv  2017-08.csv  2017-09.csv  2017-10.csv  2017-11.csv  2017-12.csv
data/eb_docs/by_country/2018/: 2018-01.csv  2018-02.csv  2018-03.csv  2018-04.csv  2018-05.csv  2018-06.csv  2018-07.csv  2018-08.csv  2018-09.csv  2018-10.csv  2018-11.csv  2018-12.csv
data/eb_docs/by_country/2019/: 2019-01.csv  2019-02.csv  2019-03.csv  2019-04.csv  2019-05.csv  2019-06.csv  2019-07.csv  2019-08.csv  2019-09.csv  2019-10.csv  2019-11.csv  2019-12.csv
data/eb_docs/by_country/2020/: 2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  2020-05.csv  2020-06.csv  2020-07.csv  2020-08.csv  2020-09.csv  2020-10.csv  2020-11.csv  2020-12.csv
data/eb_docs/by_country/2021/: 2021-01.csv  2021-02.csv  2021-03.csv  2021-04.csv  2021-05.csv  2021-06.csv  2021-07.csv  2021-08.csv  2021-09.csv  2021-10.csv  2021-11.csv  2021-12.csv
data/eb_docs/by_country/2022/: 2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv
data/eb_docs/by_country/2023/: 2023-01.csv
users-per-month/: export.py
users-per-month/data/eb_docs/: users_per_month.csv
users-per-month/data/spack_docs/: users_per_month.csv
util/: iterate_months.py
(+978 files in other folders)
