[project]
name="ga-analysis"
description="Log analysis for Spack Google Analytics Data"
dependencies=[]

[tool.black]
line-length = 99
target-version = ['py311']
include = '''
    \.pyi?$
'''
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | ^lib/spack/external/
  | ^opt/
)/
'''
skip_magic_trailing_comma = true
